# smt-baumer

./: .gitignore  CMakeLists.txt  COPYING
examples/: CMakeLists.txt
include/: BCamera.h  BasicDef.h  CameraWrapper.h  systems.h
source/: CMakeLists.txt  CameraWrapper.cpp
source/cmake/: Config.cmake.in  FindBaumer.cmake
src/: BCamera.cpp  CMakeLists.txt  CameraWrapper.cpp  smt-baumerConfig.cmake.in
tests/: CMakeLists.txt  main.cpp  tst_baumercamera.h
